--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Niranjan Gorojanam CV</title>
   </head>
-  <h1 style="text-align: center">CURRICULLUM VIATE</h1>
+  <h1 style="text-align: center">CURRICULUM VIATE</h1>
   <h2>
     <u><b>Name:-</b></u> <i>GOROJANAM NIRANJAN</i>
   </h2>
