--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1.0" />
-        <title>Niranjan CV</title>
+        <title>Niranjan Gorojanam CV</title>
         <link rel="shortcut icon" href="./DSC_9639 (2).jpg" type="image/x-icon">
         <style>
             tr,th,td
