--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         <!--  Resume Body starts   -->
         <header>
-            <h1 style="text-align: center;">CURRICULUM VITAE</h1>
+            <h1 style="text-align: center;">RESUME</h1>
             <nav>
                 <a href="#address">Address</a>
                 <a href="#about">About</a>
@@ -82,7 +82,7 @@
                     <td style="text-align: center;">DEGREE</td>
                     <td style="text-align: center;">DR.A.E.R Degree College</td>
                     <td style="text-align: center;">2023</td>
-                    <td style="text-align: center;">85%</td>
+                    <td style="text-align: center;">85 %</td>
                 </tr>
                 <tr>
                     <td style="text-align: center;">INTERMEDIATE</td>
@@ -94,7 +94,7 @@
                     <td style="text-align: center;">SSC</td>
                     <td style="text-align: center;">JCR Chaitanya English Meidum High School</td>
                     <td style="text-align: center;">2018</td>
-                    <td style="text-align: center;">9.8</td>
+                    <td style="text-align: center;">9.8 GPA</td>
                 </tr>
             </table>
            <hr>
