--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <style>
       tr,
       th,
-      td {
-        border: 1px solid #131212;
+      td 
+      {
+        border: 1px solid #ff0909;
       }
     </style>
   </head>
