--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h2>Here's who I am & what I do</h2>
         <div class = "about-btns">
             <a href="./NIRANJAN G RESUME.pdf" target="_blank">
-          <button type = "button" class = "btn btn-pink">resume</button>
+          <button type = "button" class = "btn btn-pink">RESUME</button>
         </a>
           
         </div>
