--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
           <div>
             <div class = "shadow">
               <div class = "about-img">
-                <img src = "./DSC_9639 (2).jpg" alt = "about image">
+                <img src = "./WhatsApp Image 2023-10-14 at 13.00.54_a012b8c9.jpg" alt = "about image">
               </div>
             </div>
 
-            <h2>Niranjan<br>Gorojanam</h2>
+            <h2>NIRANJAN<br>GOROJANAM</h2>
             <h3>FrontEnd Developer</h3>
           </div>
 
@@ -49,7 +49,9 @@
             <a href="./NIRANJAN G RESUME.pdf" target="_blank">
           <button type = "button" class = "btn btn-pink">RESUME</button>
         </a>
-          
+        <a href="">
+        <BUtton type= "button" class= "btn btn-pink">PROJECTS</BUtton>
+      </a> 
         </div>
 
         <div class = "about-para">
