--- a/PROJECT1/Index.html
+++ b/PROJECT1/Index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>About Me</title>
+    <link rel="shortcut icon" href="./NG LOGO.jpg" type="image/x-icon" >
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./Style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
@@ -16,7 +17,7 @@
           <div>
             <div class = "shadow">
               <div class = "about-img">
-                <img src = "./WhatsApp Image 2023-10-14 at 13.00.54_a012b8c9.jpg" alt = "about image">
+                <img src = "./NIRU.jpg" alt = "about image">
               </div>
             </div>
 
@@ -37,13 +38,14 @@
             <a href="https://www.instagram.com/_niranjan_6478/" target="_blank">
             <li><i class = "fab fa-instagram"></i></li>
             </a>
-            
           </ul>
         </div>
       </div>
 
       <div class = "about-right">
-        <h1>hi<span>!</span></h1>
+<br>
+<br>
+        <h1>Hello<span>!</span></h1>
         <h2>Here's who I am & what I do</h2>
         <div class = "about-btns">
             <a href="./NIRANJAN G RESUME.pdf" target="_blank">
